--- a/src/GulpExample/Features/Home/Index.cshtml
+++ b/src/GulpExample/Features/Home/Index.cshtml
@@ -2,6 +2,20 @@
     ViewData["Title"] = "Home Page";
 }
 
+
+
+
+@section scripts
+{
+    
+<environment names="Development">
+    <script src="~/js/features/home/index.js"></script>
+</environment>
+<environment names="Staging,Production">
+    <script src="~/js/features/home/index.min.js"></script>
+</environment>
+}
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
